syntax = "proto3";

option go_package = "github.com/kaushikkishore/demo-grpc/invoicer";

message Amount  {
// Define the input for the request 
    int64 amount = 1;
    string currency = 2;
}

message CreateRequest {
    Amount amount = 1;
    string from = 2;
    string to = 3;

}

message CreateResponse{
    bytes pdf = 1;
    bytes docx = 2;
}

message CreateLogRequest {
    string name = 1;
    string group = 2;
}

message CreateLogResponse {
    string timestamp  = 1;
    string type = 2;
    string logMessage = 3;
}

service invoicer {
    rpc Create(CreateRequest) returns(CreateResponse);
    rpc Logging(CreateLogRequest) returns (stream CreateLogResponse);
}